# cuda_braid

./: CMakeLists.txt  optimization_test.sh
cpu_version_src/: Makefile  braid.cc  braid.h  main.cc  main.h  siphash.cc  siphash.h
src/: braid.cu  braid.cuh  check.cu  check.cuh  main.cu  main.cuh  siphash.cu  siphash.cuh
